@@ -20,5 +20,8 @@ July 6, 2025 & July 7 2025 (changed at midnight):
     mp will not go past maxmp
   -when obtaining input for player.name in main.c, I replaced the '\n' with '\0', commented out the if else statement at the beginning of printCharacter() in character.c
   
-
+July 8, 2025:
+  - "Peanut" usually does not survive this experiment.
+  - As for "Walnut"...
+  - Rocks get turned into Rock Butter
     
